upload all files

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           <div class="badges"><span class="badge">Plating</span><span class="badge">Zinc/Nickel/Copper/Brass</span></div>
           <h3 data-i18n-key="card_plating_title">น้ำยาชุบโลหะ</h3>
           <p data-i18n-key="card_plating_desc">เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์</p>
-          <a class="more" href="products/platingcoating.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/platingcoating/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Blackening -->
@@ -403,7 +403,7 @@
           <div class="badges"><span class="badge">Blackening</span><span class="badge">Steel/Zinc/Copper/Brass/Aluminium</span></div>
           <h3 data-i18n-key="card_black_title">น้ำยารมดำโลหะ</h3>
           <p data-i18n-key="card_black_desc">งานรมดำ เพื่อเพิ่มความสวยงาม ป้องกันการกัดกร่อน และลดแสงสะท้อน สีสม่ำเสมอ คุมกระบวนการง่าย</p>
-          <a class="more" href="products/blackening.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/blackening/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Passivation -->
@@ -413,7 +413,7 @@
           <div class="badges"><span class="badge">Passivation</span><span class="badge">Zinc Chromate</span></div>
           <h3 data-i18n-key="card_pass_title">โครเมตบนซิงค์</h3>
           <p data-i18n-key="card_pass_desc">ชิ้นงานมีอายุการใช้งานที่ยาวขึ้น เพิ่มความทนการกัดกร่อน การเคลือบสีติดแน่นและทนทานมากขึ้น</p>
-          <a class="more" href="products/passivation.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/passivation/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Polishing -->
@@ -423,7 +423,7 @@
           <div class="badges"><span class="badge">Polishing</span><span class="badge">Brightening</span></div>
           <h3 data-i18n-key="card_polish_title">น้ำยากัดเงาบนโลหะ</h3>
           <p data-i18n-key="card_polish_desc">การกัดเงาด้วยสารเคมี รวมถึงเพิ่มความสวยงามให้กับผลิตภัณฑ์ ปรับผิวให้เงางามสม่ำเสมอ ลดรอยก่อนชุบ</p>
-          <a class="more" href="products/polishing.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/polishing/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Strippers -->
@@ -433,7 +433,7 @@
           <div class="badges"><span class="badge">Strippers</span><span class="badge">Selective</span></div>
           <h3 data-i18n-key="card_strip_title">น้ำยาลอกต่างๆ</h3>
           <p data-i18n-key="card_strip_desc">ลอกงานชุบ/สี ตรงจุด ควบคุมง่าย พร้อมสำหรับกระบวนการต่อไป เช่น การชุบ การพ่นสี หรือการเชื่อม</p>
-          <a class="more" href="products/strippers.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/strippers/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Protective Treatment -->
@@ -448,7 +448,7 @@
           </div>
           <h3 data-i18n-key="card_protect_title">น้ำยารักษาผิวชุบให้คงทน</h3>
           <p data-i18n-key="card_protect_desc">สร้างชั้นปกป้องให้กับพื้นผิวโลหะ ช่วยป้องกันการเกิดออกซิเดชั่นและการหมองคล้ำจากการใช้งานในระยะยาว</p>
-          <a class="more" href="products/protective.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/protective/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Service -->
@@ -458,7 +458,7 @@
           <div class="badges"><span class="badge">Service</span><span class="badge">On-site Support</span></div>
           <h3 data-i18n-key="card_service_title">งานบริการลูกค้า</h3>
           <p data-i18n-key="card_service_desc">ควบคุมคุณภาพอย่างละเอียด และให้คำปรึกษาโดยผู้เชี่ยวชาญ วางแผนคุมคุณภาพ และทดสอบหน้างาน</p>
-          <a class="more" href="products/service.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/service/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Equipment -->
@@ -468,7 +468,7 @@
           <div class="badges"><span class="badge">Equipment</span><span class="badge">Tools</span></div>
           <h3 data-i18n-key="card_equip_title">วัสดุอุปกรณ์</h3>
           <p data-i18n-key="card_equip_desc">การเลือกใช้อุปกรณ์และเครื่องมือที่เหมาะสม เป็นสิ่งสำคัญในกระบวนการชุบให้ได้ผลลัพธ์ที่มีคุณภาพสูง</p>
-          <a class="more" href="products/equipment.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="products/equipment/index.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
