upload all files

--- a/products.html
+++ b/products.html
@@ -419,7 +419,7 @@ const PRODUCTS = [
     tags:{ th:["pretreatment","cleaning","degreaser","ล้างไขมัน","ultrasonic","acid","alkaline"],
            en:["pretreatment","cleaning","degreaser","ultrasonic","acid","alkaline"] },
     img:"https://i.imgur.com/QfsLZ0I.jpeg",
-    href:"pretreatment.html",
+    href:"products/pretreatment/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: เคมีล้างผิวงาน",
     tds:"https://www.baumechemical.com/docs/tds/pretreatment-cleaning.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -432,7 +432,7 @@ const PRODUCTS = [
     tags:{ th:["plating","zinc","nickel","copper","brass","white bronze","ชุบโลหะ"],
            en:["plating","zinc","nickel","copper","brass","white bronze"] },
     img:"https://i.imgur.com/DzCh11Q.jpeg",
-    href:"platingcoating.html",
+    href:"products/platingcoating/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
     tds:"https://www.baumechemical.com/docs/tds/metal-plating.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -445,7 +445,7 @@ const PRODUCTS = [
     tags:{ th:["blackening","black oxide","steel","brass","aluminium","รมดำ"],
            en:["blackening","black oxide","steel","brass","aluminium"] },
     img:"https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg",
-    href:"blackening.html",
+    href:"products/blackening/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยารมดำ",
     tds:"https://www.baumechemical.com/docs/tds/blackening.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -458,7 +458,7 @@ const PRODUCTS = [
     tags:{ th:["passivation","chromate","trivalent","hex-free","โครเมต","โครเมต 3"],
            en:["passivation","chromate","trivalent","hex-free"] },
     img:"https://i.imgur.com/FovZyQU.jpeg",
-    href:"passivation.html",
+    href:"products/passivation/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: โครเมตบนซิงค์",
     tds:"https://www.baumechemical.com/docs/tds/passivation-zinc.pdf",
     specs:{ph:"—", temp:"—", current:"—"},
@@ -472,7 +472,7 @@ const PRODUCTS = [
     tags:{ th:["stripper","deplate","paint remover","ลอกงาน","ลอกชุบ","ลอกสี"],
            en:["stripper","deplate","paint remover","coating remover"] },
     img:"https://img2.pic.in.th/pic/thumbnail-4.jpg",
-    href:"strippers.html",
+    href:"products/strippers/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยาลอกต่างๆ",
     tds:"https://www.baumechemical.com/docs/tds/selective-strippers.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -485,7 +485,7 @@ const PRODUCTS = [
     tags:{ th:["polishing","bright dip","electropolish","กัดเงา","ขัดเงา"],
            en:["polishing","bright dip","electropolish"] },
     img:"https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg",
-    href:"polishing.html",
+    href:"products/polishing/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยากัดเงา",
     tds:"https://www.baumechemical.com/docs/tds/chemical-polishing.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -498,7 +498,7 @@ const PRODUCTS = [
     tags:{ th:["topcoat","sealant","anti-tarnish","รักษาผิว","เคลือบผิว","ท็อปโค้ท"],
            en:["topcoat","sealant","anti-tarnish"] },
     img:"https://i.imgur.com/tP3buYl.jpeg",
-    href:"protective.html",
+    href:"products/protective/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยารักษาผิวชุบให้คงทน",
     tds:"https://www.baumechemical.com/docs/tds/protective-treatment.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -511,7 +511,7 @@ const PRODUCTS = [
     tags:{ th:["service","on-site","technical","titration","QA","บริการหน้างาน","ตรวจอ่างชุบ"],
            en:["service","on-site","technical","titration","QA"] },
     img:"https://img2.pic.in.th/pic/thumbnail-6.jpg",
-    href:"service.html",
+    href:"products/service/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=ติดต่อทีมเทคนิค: บริการหน้างาน",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -523,7 +523,7 @@ const PRODUCTS = [
     tags:{ th:["equipment","tools","anode basket","filter","heater","อุปกรณ์","เครื่องมือ"],
            en:["equipment","tools","anode basket","filter","heater"] },
     img:"https://i.imgur.com/BiTxYRw.jpeg",
-    href:"equipment.html",
+    href:"products/equipment/index.html",
     mail:"mailto:baumechemical@gmail.com?subject=สอบถามราคา: วัสดุอุปกรณ์",
     specs:{ph:"—", temp:"—", current:"—"}
   }
