upload all files

--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -196,7 +196,7 @@
           <p data-i18n-key="nickel_desc">
             ทั้งแบบมีไฟและไม่ใช้ไฟ เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก
           </p>
-          <a class="more" href="Nickelplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="nickelplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
