upload all files

--- a/products/equipment/index.html
+++ b/products/equipment/index.html
@@ -19,7 +19,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="วัสดุอุปกรณ์ | Baume Chemical">
   <meta property="og:description" content="อุปกรณ์ห้องแล็บและเครื่องมือควบคุมกระบวนการชุบโลหะครบวงจร พร้อมทีมที่ปรึกษา">
-  <meta property="og:url" content="https://www.baumechemical.com/equipment">
+  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/index.html">
   <meta property="og:image" content="https://i.imgur.com/3mWQsKe.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -40,7 +40,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Equipment",
-    "url":"https://www.baumechemical.com/equipment",
+    "url":"https://www.baumechemical.com/products/equipment/index.html",
     "description":"Lab reagents, analytical instruments, and plating line equipment for metal finishing."
   }
   </script>
