--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -8,9 +8,9 @@
   <!-- === SEO === -->
   <meta name="description" content="โครเมตบนซิงค์เพิ่มความทนการกัดกร่อน การยึดเกาะสี ลดการเกิด White Rust และเพิ่มความสวยงาม มีทั้ง Cr3/Cr6: ฟ้า/ขาว ดำ รุ้ง เหลือง และ Olive Drab">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="passivation.html">
-  <link rel="alternate" hreflang="th" href="passivation.html">
-  <link rel="alternate" hreflang="en" href="passivation.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/passivation/index.html">
+  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/passivation/index.html">
+  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/passivation/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="keywords" content="Chromate on Zinc, Zinc Passivation, Trivalent, Hexavalent, Blue Chromate, Black Chromate, Iridescent, Yellow, Olive Drab, White Rust, Baume Chemical">
 
@@ -20,7 +20,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="โครเมตบนซิงค์ (Passivation) - Baume Chemical">
   <meta property="og:description" content="Passivation บนซิงค์เพื่อเพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 และหลายเฉดสีตามสเปก">
-  <meta property="og:url" content="https://www.baumechemical.com/passivation">
+  <meta property="og:url" content="https://www.baumechemical.com/products/passivation/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-4.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Chromate on Zinc",
-    "url":"https://www.baumechemical.com/passivation",
+    "url":"https://www.baumechemical.com/products/passivation/index.html",
     "description":"Chromate conversion coating on zinc in Cr3/Cr6 variants with multiple finishes to enhance corrosion resistance and paint adhesion."
   }
   </script>
@@ -51,7 +51,7 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Chromate on Zinc","item":"https://www.baumechemical.com/passivation"}
+      {"@type":"ListItem","position":2,"name":"Chromate on Zinc","item":"https://www.baumechemical.com/products/passivation/index.html"}
     ]
   }
   </script>
@@ -60,14 +60,14 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Blue (White) Chromate 3","url":"https://www.baumechemical.com/passivation/blue-passivation-on-zinc"},
-      {"@type":"ListItem","position":2,"name":"Black Chromate 3","url":"https://www.baumechemical.com/passivation/troubleshootingtrivalentchromeblack"},
-      {"@type":"ListItem","position":3,"name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/passivation/iridescent-passivation-on-zinc"},
-      {"@type":"ListItem","position":4,"name":"Yellow Chromate 3","url":"https://www.baumechemical.com/passivation/yellow-passivation-on-zinc"},
-      {"@type":"ListItem","position":5,"name":"Blue (White) Chromate 6","url":"https://www.baumechemical.com/passivation/troubleshootinghexavalentchromeblue"},
-      {"@type":"ListItem","position":6,"name":"Black Chromate 6","url":"https://www.baumechemical.com/passivation/troubleshootinghexavalentchromeblack"},
-      {"@type":"ListItem","position":7,"name":"Yellow Chromate 6","url":"https://www.baumechemical.com/passivation/yellow-6-passivation-on-zinc"},
-      {"@type":"ListItem","position":8,"name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/passivation/olive-6-passivation-on-zinc"}
+      {"@type":"ListItem","position":1,"name":"Blue (White) Chromate 3","url":"https://www.baumechemical.com/products/passivation/blue-passivation-on-zinc"},
+      {"@type":"ListItem","position":2,"name":"Black Chromate 3","url":"https://www.baumechemical.com/products/passivation/troubleshootingtrivalentchromeblack"},
+      {"@type":"ListItem","position":3,"name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/products/passivation/iridescent-passivation-on-zinc"},
+      {"@type":"ListItem","position":4,"name":"Yellow Chromate 3","url":"https://www.baumechemical.com/products/passivation/yellow-passivation-on-zinc"},
+      {"@type":"ListItem","position":5,"name":"Blue (White) Chromate 6","url":"https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblue"},
+      {"@type":"ListItem","position":6,"name":"Black Chromate 6","url":"https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblack"},
+      {"@type":"ListItem","position":7,"name":"Yellow Chromate 6","url":"https://www.baumechemical.com/products/passivation/yellow-6-passivation-on-zinc"},
+      {"@type":"ListItem","position":8,"name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/products/passivation/olive-6-passivation-on-zinc"}
     ]
   }
   </script>
