--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -8,7 +8,7 @@
   <!-- === SEO === -->
   <meta name="description" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — เงากระจก ลดคราบ ออกแบบกระบวนการให้เหมาะกับไลน์ผลิต">
   <meta name="robots" content="index,follow">
-  <link rel="canonical" href="polishing.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) - Baume Chemical">
   <meta property="og:description" content="สารเคมีกัดเงา/ขัดเงาโลหะ: เงากระจก ทนการกัดกร่อน เหมาะทั้งงานอุตสาหกรรมและตกแต่ง">
-  <meta property="og:url" content="https://www.baumechemical.com/polishing">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -38,7 +38,7 @@
     "@type":"CollectionPage",
     "name":"Polishing",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/polishing",
+    "url":"https://www.baumechemical.com/products/polishing/index.html",
     "description":"สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว"
   }
   </script>
@@ -57,11 +57,11 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
-      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
-      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
-      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
-      {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
+      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
+      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
+      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
+      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/products/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
+      {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
     ]
   }
   </script>
