--- a/products/service/index.html
+++ b/products/service/index.html
@@ -8,9 +8,9 @@
   <!-- === SEO === -->
   <meta name="description" content="บริการลูกค้า Baume Chemical: วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบสเปรย์ซอลต์ และที่ปรึกษากระบวนการชุบ โดยทีมมากประสบการณ์ 30+ ปี มาตรฐานแม่นยำเชื่อถือได้">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="service.html">
-  <link rel="alternate" hreflang="th" href="service.html">
-  <link rel="alternate" hreflang="en" href="service.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/service/">
+  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/service/">
+  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/service/">
   <meta name="theme-color" content="#387b5b">
   <meta name="keywords" content="metal plating service, chemical analysis, AA Test, Salt Spray Test, plating troubleshooting, laboratory, Baume Chemical">
 
@@ -20,7 +20,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="บริการลูกค้า | Baume Chemical">
   <meta property="og:description" content="วิเคราะห์สารละลาย, AA Test, Salt Spray Test และให้คำปรึกษากระบวนการชุบโลหะ โดยผู้เชี่ยวชาญ">
-  <meta property="og:url" content="https://www.baumechemical.com/service">
+  <meta property="og:url" content="https://www.baumechemical.com/products/service/">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-6.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Customer Service",
-    "url":"https://www.baumechemical.com/service",
+    "url":"https://www.baumechemical.com/products/service/",
     "description":"Customer services for metal plating: chemical solution analysis, AA Test, Salt Spray Test and process consultation by Baume Chemical."
   }
   </script>
@@ -51,7 +51,7 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Service","item":"https://www.baumechemical.com/service"}
+      {"@type":"ListItem","position":2,"name":"Service","item":"https://www.baumechemical.com/products/service/"}
     ]
   }
   </script>
