--- a/products/strippers/index.html
+++ b/products/strippers/index.html
@@ -8,7 +8,7 @@
   <!-- === SEO === -->
   <meta name="description" content="น้ำยาลอกชั้นชุบ/ออกไซด์/สี สำหรับเหล็ก ทองแดง ทองเหลือง ฯลฯ — ควบคุมง่าย ลอกเฉพาะชั้นเคลือบ เตรียมผิวสำหรับชุบ พ่นสี หรือเชื่อม">
   <meta name="robots" content="index,follow">
-  <link rel="canonical" href="strippers.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/strippers/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="น้ำยาลอกผิว/ลอกชุบ (Strippers) - Baume Chemical">
   <meta property="og:description" content="ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะจุด เพื่อเตรียมผิวสำหรับกระบวนการถัดไปในไลน์ผลิต">
-  <meta property="og:url" content="https://www.baumechemical.com/strippers">
+  <meta property="og:url" content="https://www.baumechemical.com/products/strippers/">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-4.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -38,7 +38,7 @@
     "@type":"CollectionPage",
     "name":"Strippers",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/strippers",
+    "url":"https://www.baumechemical.com/products/strippers/",
     "description":"น้ำยาลอกชั้นชุบ/ออกไซด์/สี สำหรับโลหะหลายชนิด เหมาะกับงานเตรียมผิวก่อนชุบ พ่นสี หรือเชื่อม"
   }
   </script>
@@ -48,7 +48,7 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Strippers","item":"https://www.baumechemical.com/strippers"}
+      {"@type":"ListItem","position":2,"name":"Strippers","item":"https://www.baumechemical.com/products/strippers/"}
     ]
   }
   </script>
@@ -57,9 +57,9 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/home/strippers/stripper-steel","name":"Nickel Stripper for Steel"},
-      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/home/strippers/stripper-brass","name":"Nickel Stripper for Copper & Brass"},
-      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/home/strippers/stripper-steel-electroplating","name":"Electroplated Nickel Stripper for Steel"}
+      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/strippers/stripper-steel","name":"Nickel Stripper for Steel"},
+      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/strippers/stripper-brass","name":"Nickel Stripper for Copper & Brass"},
+      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/strippers/stripper-steel-electroplating","name":"Electroplated Nickel Stripper for Steel"}
     ]
   }
   </script>
