--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -8,7 +8,7 @@
   <!-- === SEO === -->
   <meta name="description" content="น้ำยารมดำสำหรับทองเหลือง ทองแดง เหล็ก สังกะสี และอลูมิเนียม แบบจุ่มเย็น ใช้งานง่าย สีสม่ำเสมอ ช่วยลดแสงสะท้อนและเสริมการป้องกันการกัดกร่อน">
   <meta name="robots" content="index,follow">
-  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="น้ำยารมดำโลหะ (Blackening) - Baume Chemical">
   <meta property="og:description" content="โซลูชันรมดำโลหะ: Brass, Copper, Steel, Zinc, Aluminium — จุ่มเย็น สีดำสม่ำเสมอ เคลือบแลคเกอร์/น้ำมันปิดผิวได้">
-  <meta property="og:url" content="https://www.baumechemical.com/products/blackening/index.html">
+  <meta property="og:url" content="https://www.baumechemical.com/products/blackening/">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -38,7 +38,7 @@
     "@type":"CollectionPage",
     "name":"Blackening",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/products/blackening/index.html",
+    "url":"https://www.baumechemical.com/products/blackening/",
     "description":"น้ำยารมดำและสารทำพาทินาสำหรับงานอุตสาหกรรมและตกแต่ง ครอบคลุมหลายวัสดุ"
   }
   </script>
@@ -48,7 +48,7 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Blackening","item":"https://www.baumechemical.com/products/blackening/index.html"}
+      {"@type":"ListItem","position":2,"name":"Blackening","item":"https://www.baumechemical.com/products/blackening/"}
     ]
   }
   </script>
